# PINE

demo_PINE/: CMakeLists.txt
demo_PINE/.cache/clangd/index/: ActuacionRepository.cpp.5733383F157B1520.idx  ActuacionService.cpp.2765A4C11BBC84BB.idx  ClienteRepository.cpp.D77279C7D1F1C4B3.idx  ClienteService.cpp.07D4F76F3F5A0804.idx  ExpedienteRepository.cpp.20DEE6D4FDF2C4AF.idx  ExpedienteService.cpp.270622CF2E82AA91.idx  FaseRepository.cpp.C220D80A4341EAA4.idx  FaseService.cpp.534FF4C78CCB2E55.idx  main.cpp.62485D4C4D41D72B.idx
demo_PINE/qml/Componentes/: SideBar.qml  SideBarButton.qml
demo_PINE/qml/Pantallas/: PaginaClientes.qml
demo_PINE/src/: main.cpp
demo_PINE/src/Models/Actuacion/: Actuacion.cpp  Actuacion.h
demo_PINE/src/Models/Cliente/: Cliente.cpp  Cliente.h
demo_PINE/src/Models/Expediente/: Expediente.cpp  Expediente.h
demo_PINE/src/Models/Fase/: Fase.cpp  Fase.h
demo_PINE/src/Repository/: Repository.h
demo_PINE/src/Services/ActuacionService/: ActuacionService.h
